# ai-security-control-plane

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  README.md  ai_product_factory_operating_guide.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  run_api.bat  run_ui.bat
docs/: architecture.md  blueprint.md  blueprint_status.md
docs/adr/: 001-model-selection.md  002-database-choice.md  003-security-architecture.md  004-observability-evaluation.md  005-deployment-strategy.md
src/api/: dependencies.py
src/api/routes/: analyze.py
src/core/: config.py
src/models/: __init__.py  audit.py  requests.py  responses.py
src/services/: audit_logger.py  injection_detector.py  llm_client.py  llm_guardrail_judge.py  llm_router.py  openrouter_llm_provider.py  output_validator.py  phi_scrubber.py  policy_engine.py  risk_classifier.py
tests/: test_analyze_api.py  test_audit_logger.py  test_injection_detector.py  test_llm_guardrail_judge.py  test_llm_integration.py  test_llm_router.py  test_models.py  test_openrouter_llm_provider.py  test_output_validator.py  test_phi_scrubber.py  test_policy_engine.py  test_postcheck_api.py  test_precheck_api.py  test_prepost_api.py  test_risk_classifier.py  test_upgrade_behavior.py
ui/: app.py
